fix collapse functionality on edge

--- a/src/components/list-group/list-group.scss
+++ b/src/components/list-group/list-group.scss
@@ -9,6 +9,12 @@
   }
 }
 
+:host(.collapsed) {
+  .group-item {
+    display: none;
+  }
+}
+
 :host(.treeview) {
   button {
     flex-direction: row-reverse;
